--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif32
 board = m5stack-core-esp32
 framework = arduino
+lib_deps = 
+	m5stack/M5Unified@^0.2.5
+	m5stack/M5GFX@^0.2.6
